--- a/rescat/rescat/Map/Storyboard/Base.lproj/Map.storyboard
+++ b/rescat/rescat/Map/Storyboard/Base.lproj/Map.storyboard
@@ -911,7 +911,7 @@
                                                         </constraints>
                                                     </imageView>
                                                 </subviews>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="backgroundColor" red="0.99216347932815552" green="0.99214500188827515" blue="0.99215751886367798" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <constraints>
                                                     <constraint firstItem="J83-0L-jla" firstAttribute="centerY" secondItem="HxG-c2-MNj" secondAttribute="centerY" id="0AB-Fe-YFH"/>
                                                     <constraint firstAttribute="trailing" secondItem="J83-0L-jla" secondAttribute="trailing" constant="31" id="3WM-jh-WKJ"/>
@@ -957,7 +957,7 @@
                                                 <rect key="frame" x="24" y="425" width="327" height="100"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <color key="tintColor" red="0.94901960780000005" green="0.60784313729999995" blue="0.60784313729999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                <color key="textColor" red="0.43137254899999999" green="0.30196078430000001" blue="0.2156862745" alpha="1" colorSpace="calibratedRGB"/>
+                                                <color key="textColor" red="0.41425788400000002" green="0.30715775490000002" blue="0.22743332390000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                 <userDefinedRuntimeAttributes>
